# SkyStore

./: .gitignore  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.moon/: workspace.yml
.moon/cache/: runReport.json
.moon/cache/states/: moonVersionCheck.json  projectsBuildData.json  setupToolchain-system-global.json  workspaceGraph.json
.moon/tasks/: rust.yml  typescript.yml
core_types/: moon.yml  package.json  tsconfig.json
core_types/src/: asset.ts  flight.ts  index.ts  mission.ts  organization.ts  project.ts  rest_result.ts  task.ts  user.ts
docker/: moon.yml
docker/compose-full/: docker-compose.yml  moon.yml
minio/: moon.yml
node-odm/: moon.yml
odm-bridge/: .env.example  Dockerfile  README.md  moon.yml  package.json
odm-bridge/src/: index.ts
postgres/: moon.yml
redis/: moon.yml
server/: .gitignore  Dockerfile  README.md  moon.yml  package.json
server/prisma/: README.md  schema.prisma
server/src/: config.ts  index.ts
server/test/: auth.test.ts
web/: .env.example  Dockerfile  index.html  moon.yml  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  Routes.tsx  constants.ts  global.css  index.css  main.jsx
web/tests/: nominal.spec.ts
workstreams/: README.md  create_assets_from_dropbox.py  deploy.py  deploy_dropbox_scanner.py  deploy_vggt.py  dropbox_scanner.py  init_minio.py  prefect.yaml  pyproject.toml  requirements.txt  test.Dockerfile  test_dropbox_asset_creation.py  test_vggt_s3.py  upload_test_images.py  vggt_s3_task.py
workstreams/skystore_client/skystore_client/: types.py
(+114 files in other folders)
